# vexscan

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  marketplace.json
.claude-plugin/: marketplace.json
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml  validate-rules.yml
assets/: terminal-screenshot.html
benches/: scanner.rs
data/: malicious-packages.json  popular-packages.json
docs/: README.md  ai-analysis.md  ast-analysis.md  dependency-scanning.md  encoding-detection.md  static-analysis.md
docs/rules/: reference.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugins/: README.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: scan.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: session-scan.sh
plugins/openclaw/: README.md  SKILL.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/openclaw/src/: cli-wrapper.ts  openclaw-sdk.d.ts  types.ts
rules/: CONTRIBUTING.md  README.md  rule-schema.json
rules/ast/: ast-rules.json
rules/community/: cloud-security.json
rules/official/: backdoor-detection.json  batch-scripts.json  code-execution.json  credential-access.json  dangerous-operations.json  data-exfiltration.json  hardcoded-secrets.json  hidden-content.json  mcp-configuration.json  obfuscation.json  openclaw.json  package-management.json  persistence.json  powershell.json  prompt-injection.json  remote-execution.json  resource-abuse.json  shell-execution.json  shell-scripts.json
src/: baseline.rs  cache.rs  components.rs  config.rs  domains.rs  lib.rs  main.rs  trust.rs
src/adapters/: claude_code.rs  generic.rs  mod.rs
src/analyzers/: injection_context.rs  mod.rs
src/analyzers/ai/: mod.rs
src/analyzers/ast/: mod.rs  rules.rs  scope.rs
src/analyzers/ast/detectors/: comma_operator.rs  computed_access.rs  destructured_alias.rs  escape_sequences.rs  mod.rs  string_concat.rs  variable_aliasing.rs
src/analyzers/static_analysis/: mod.rs
src/cli/: mod.rs
src/decoders/: mod.rs
src/reporters/: mod.rs
src/rules/: loader.rs  mod.rs  patterns.rs
src/scope/: mod.rs
src/trace/: mod.rs
src/types/: mod.rs
tests/: detection_tests.rs
tests/samples/backdoor/: production-backdoor.js
tests/samples/code-execution/: dynamic-import.js  eval-user-input.js  python-exec.py  sql-injection.py  yaml-deser.py
tests/samples/credential-theft/: aws-creds.py  env-dump.js  ssh-keys.js
tests/samples/dangerous-ops/: system-destruction.sh
tests/samples/data-exfiltration/: beacon-dns-clipboard.js  discord-webhook.js  dns-exfil.sh  external-post.js  telegram-bot.py
tests/samples/hardcoded-secrets/: leaked-keys.py
tests/samples/mcp-configuration/: malicious-mcp-config.json
tests/samples/obfuscation/: base64-payload.js  charcode-exec.js  multi-layer.js
tests/samples/package-management/: malicious-install.sh  npx-git-install.sh
tests/samples/prompt-injection/: admin-impersonation.md  basic-override.md  comment-injection.py  hidden-system-tag.md  role-hijack.md  system-reveal.md
tests/samples/resource-abuse/: dos-patterns.py  dos-patterns.sh
tests/samples/shell-injection/: child-process.js  python-subprocess.py  reverse-shell.sh
tests/samples/shell-scripts/: batch-attacks.bat  powershell-attacks.ps1  shell-attacks.sh
