[package]
name = "agent-security"
version = "0.1.0"
edition = "2021"
description = "Security scanner for AI agent plugins, skills, and configurations"
license = "Apache-2.0"
repository = "https://github.com/yourusername/agent-security"
keywords = ["security", "ai", "agent", "scanner", "malware"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# File system
walkdir = "2"
globset = "0.4"
notify = "6"  # File watching

# Pattern matching
regex = "1"
aho-corasick = "1"  # Fast multi-pattern matching

# Encoding detection/decoding
base64 = "0.22"
data-encoding = "2"

# AST parsing
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# HTTP client (for AI backends)
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
once_cell = "1"
sha2 = "0.10"  # For file hashing
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"  # Home directory detection
git2 = "0.19"  # Git operations for vet command
tempfile = "3"  # Temp directories for vet command

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
